@@ -22,10 +22,10 @@ static void PyThread__init_thread(void)
 /*
  * Thread support.
  */
-int PyThread_start_new_thread(void (*func)(void *), void *arg)
+long PyThread_start_new_thread(void (*func)(void *), void *arg)
 {
 	long rv;
-	int success = 0;
+	int success = -1;
 
 	dprintf(("%ld: PyThread_start_new_thread called\n", PyThread_get_thread_ident()));
 	if (!initialized)
@@ -34,7 +34,7 @@ int PyThread_start_new_thread(void (*func)(void *), void *arg)
 	rv = _beginthread(func, 0, arg); /* use default stack size */
  
 	if (rv != -1) {
-		success = 1;
+		success = 0;
 		dprintf(("%ld: PyThread_start_new_thread succeeded:\n", PyThread_get_thread_ident()));
 	}
 
